remove margin from container to fix overflow issue

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
 .container{
   width: 100%;
   padding: 0;
+  margin: 0;
 }
 ul {
   list-style: none;
